--- a/Wpf/Microsoft.DataTransfer.WpfHost/App.config
+++ b/Wpf/Microsoft.DataTransfer.WpfHost/App.config
@@ -29,6 +29,8 @@
   </dataTransfer.sources>
 
   <dataTransfer.sinks>
+    <add name="CsvFile" displayName="CSV file" type="Microsoft.DataTransfer.CsvFile.Sink.CsvFileSinkAdapterFactory, Microsoft.DataTransfer.CsvFile" />
+    
     <add name="JsonFile" displayName="JSON file" type="Microsoft.DataTransfer.JsonFile.Sink.JsonFileSinkAdapterFactory, Microsoft.DataTransfer.JsonFile" />
 
     <add name="DocumentDBBulk" displayName="Azure Cosmos DB - Bulk import (single partition collections)" type="Microsoft.DataTransfer.DocumentDb.Sink.Bulk.DocumentDbBulkSinkAdapterFactory, Microsoft.DataTransfer.DocumentDb" />
@@ -51,6 +53,7 @@
     <add type="Microsoft.DataTransfer.JsonFile.Wpf.Source.JsonFileSourceAdapterConfigurationProvider, Microsoft.DataTransfer.JsonFile.Wpf" />
 
     <!-- Sinks -->
+    <add type="Microsoft.DataTransfer.CsvFile.Wpf.Sink.CsvFileSinkAdapterConfigurationProvider, Microsoft.DataTransfer.CsvFile.Wpf" />
     <add type="Microsoft.DataTransfer.JsonFile.Wpf.Sink.JsonFileSinkAdapterConfigurationProvider, Microsoft.DataTransfer.JsonFile.Wpf" />
     <add type="Microsoft.DataTransfer.DocumentDb.Wpf.Sink.Bulk.DocumentDbBulkSinkAdapterConfigurationProvider, Microsoft.DataTransfer.DocumentDb.Wpf" />
     <add type="Microsoft.DataTransfer.DocumentDb.Wpf.Sink.Parallel.DocumentDbParallelSinkAdapterConfigurationProvider, Microsoft.DataTransfer.DocumentDb.Wpf" />
