--- a/CsvFile/Microsoft.DataTransfer.CsvFile/Microsoft.DataTransfer.CsvFile.csproj
+++ b/CsvFile/Microsoft.DataTransfer.CsvFile/Microsoft.DataTransfer.CsvFile.csproj
@@ -46,7 +46,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ConfigurationResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Defaults.cs" />
     <Compile Include="Errors.cs" />
+    <Compile Include="IDefaults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reader\CsvReader.cs" />
     <Compile Include="Reader\CsvReaderConfiguration.cs" />
@@ -55,11 +57,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Sink\ICsvFileSinkAdapterConfiguration.cs" />
+    <Compile Include="Sink\CsvFileSinkAdapter.cs" />
+    <Compile Include="Sink\CsvFileSinkAdapterFactory.cs" />
     <Compile Include="Source\CsvFileSourceAdapter.cs" />
     <Compile Include="Source\CsvFileSourceAdapterFactory.cs" />
     <Compile Include="Source\CsvFileSourceAdapterInstanceConfiguration.cs" />
     <Compile Include="Source\ICsvFileSourceAdapterConfiguration.cs" />
     <Compile Include="Source\ICsvFileSourceAdapterInstanceConfiguration.cs" />
+    <Compile Include="Writer\CsvWriter.cs" />
+    <Compile Include="Writer\CsvWriterFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Microsoft.DataTransfer.Extensibility.Basics\Microsoft.DataTransfer.Extensibility.Basics.csproj">
